--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^10.5.1",
     "@react-three/fiber": "^9.2.0",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.11",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
